Implementing Inventory Opening
