# inventoryServer/apiGateWay/swagger.json
@@ -393,10 +393,7 @@
                     "200" : {
                         "description" : "OK",
                         "schema" : {
-                            "type" : "array",
-                            "items" :{
-                                "$ref" : "#/definitions/inventory"
-                            }
+                            "$ref" : "#/definitions/inventory"
                         }
                     },
                     "400" : {
@@ -432,6 +429,131 @@
                         "description" : "Inventory Details",
                         "schema" : {
                             "$ref" : "#/definitions/inventory"
+                        }
+                    }
+                ],
+                "responses" : {
+                    "201" : {
+                        "description" : "Created",
+                        "schema" :{
+                            "$ref" : "#/definitions/id"
+                        }
+                    },
+                    "400" : {
+                        "description" : "Bad Request",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }                    },
+                    "500" : {
+                        "description" : "Server Error",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    }
+                }
+            }
+        },
+        "/inventory/till-date/{refDate}" : {
+            "parameters" :[
+                {
+                    "name" : "refDate",
+                    "in" : "path",
+                    "required" : true,
+                    "description" : "This is the Date untill which we want the inventory information of the month",
+                    "type" : "string"
+                }
+            ],
+            "get" : {
+                "tags" : [
+                    "Inventory"
+                ],
+                "summary" : "Get all Inventories in the system of the month",
+                "responses" : {
+                    "200" : {
+                        "description" : "OK",
+                        "schema" : {
+                            "type" : "array",
+                            "items" :{
+                                "$ref" : "#/definitions/inventory"
+                            }
+                        }
+                    },
+                    "400" : {
+                        "description" : "Bad Request",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    },
+                    "404" : {
+                        "description" : "Data Could not Fetched",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    },
+                    "500" : {
+                        "description" : "Server Error",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    }
+                }
+            }
+        },
+        "/inventory/opening/{refDate}" : {
+            "parameters" :[
+                {
+                    "name" : "refDate",
+                    "in" : "path",
+                    "required" : true,
+                    "description" : "This is the Date on which we want the inventory opening information",
+                    "type" : "string"
+                }
+            ],
+            "get" : {
+                "tags" : [
+                    "Inventory"
+                ],
+                "summary" : "Get Inventory Opening on a particular date",
+                "responses" : {
+                    "200" : {
+                        "description" : "OK",
+                        "schema" : {
+                            "$ref" : "#/definitions/inventoryOpening"
+                        }
+                    },
+                    "400" : {
+                        "description" : "Bad Request",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    },
+                    "404" : {
+                        "description" : "Data Could not Fetched",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    },
+                    "500" : {
+                        "description" : "Server Error",
+                        "schema" :{
+                            "$ref" : "#/definitions/errors"
+                        }
+                    }
+                }
+            },
+            "post" : {
+                "tags" : [
+                    "Inventory"
+                ],
+                "summary" : "Creates a new Inventory Opening",
+                "parameters" : [
+                    {
+                        "in" : "body",
+                        "name" : "body",
+                        "required" : true,
+                        "description" : "Inventory Details",
+                        "schema" : {
+                            "$ref" : "#/definitions/inventoryOpening"
                         }
                     }
                 ],
@@ -583,6 +705,27 @@
                     "properties" : {
                         "<vendorIds>" : {
                             "type" : "number"
+                        }
+                    }
+                }
+            }
+        },
+        "inventoryOpening" : {
+            "type" : "object",
+            "properties" : {
+                "rows" : {
+                    "type" : "object",
+                    "properties" : {
+                        "<productIds>" : {
+                            "type" : "object",
+                            "properties" : {
+                                "packages" : {
+                                    "type" : "number"
+                                },
+                                "pieces" : {
+                                    "type" : "number"
+                                }
+                            }
                         }
                     }
                 }
