# inventoryServer/inventory/api/v1/inventory.controller.js
@@ -1,10 +1,10 @@
 const service = require('./inventory.service');
 const logger = require('../../log');
 
-const getAllCompleteInventory = (req, res) => {
+const getInventory = (req, res) => {
     logger.info('controller getAllCompleteInventory');
     logger.debug(req.params.refDate);
-    service.getAllCompleteInventory(req.params.refDate).then((response) => {
+    service.getInventory(req.params.refDate).then((response) => {
         res.status(response.status).send(response.completeInventory);
     }).catch((reject) => {
         res.status(reject.status).send([{
@@ -13,9 +13,46 @@ const getAllCompleteInventory = (req, res) => {
     });
 }
 
-const addCompleteInventory = (req, res) => {
+const getInventoriesTillDate = (req, res) => {
+    logger.info('controller getInventoryTillDate');
+    logger.debug(req.params.refDate);
+    service.getInventoriesTillDate(req.params.refDate).then((response) => {
+        res.status(response.status).send(response.inventories);
+    }).catch((reject) => {
+        res.status(reject.status).send([{
+            code : reject.errorCode
+        }]);
+    });
+}
+
+const getInventoryOpening = (req, res) => {
+    logger.info('controller getInventoryOpening');
+    logger.debug(req.params.refDate);
+    service.getInventoryOpening(req.params.refDate).then((response) => {
+        res.status(response.status).send(response.inventoryOpening);
+    }).catch((reject) => {
+        res.status(reject.status).send([{
+            code : reject.errorCode
+        }]);
+    });
+}
+
+const addInventory = (req, res) => {
     logger.info('controller addCompleteInventory');
-    service.addCompleteInventory(req.body, req.params.refDate).then((response) => {
+    service.addInventory(req.body, req.params.refDate).then((response) => {
+        res.status(response.status).send({
+            _id : response._id
+        });
+    }).catch((reject) => {
+        res.status(reject.status).send([{
+            code : reject.errorCode
+        }]);
+    });
+};
+
+const addInventoryOpening = (req, res) => {
+    logger.info('controller addInventoryOpening');
+    service.addInventoryOpening(req.body, req.params.refDate).then((response) => {
         res.status(response.status).send({
             _id : response._id
         });
@@ -27,6 +64,9 @@ const addCompleteInventory = (req, res) => {
 };
 
 module.exports = {
-    getAllCompleteInventory,
-    addCompleteInventory
+    getInventory,
+    getInventoriesTillDate,
+    getInventoryOpening,
+    addInventory,
+    addInventoryOpening
 }
